// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactSyncBanner renders correctly during sync 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "rgba(134, 138, 141, 0.15)",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "paddingHorizontal": 25,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      Object {
        "width": 25,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#42D689"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
  <View
    style={
      Object {
        "flexGrow": 1,
        "paddingHorizontal": 20,
        "paddingTop": 3,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      contactSyncProgress.header
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Regular",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      contactSyncProgress.progress
    </Text>
  </View>
</View>
`;

exports[`ContactSyncBanner shows error when sync failed 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "rgba(134, 138, 141, 0.15)",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "paddingHorizontal": 25,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      Object {
        "width": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginLeft": -10,
        }
      }
      testID="ErrorIcon"
    >
      <svg
        fill="none"
        height={45}
        style={Object {}}
        viewBox="0 0 16 16"
        width={45}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M10.1569 4.75L11.2175 5.81066L8.97834 8.04984L11.3354 10.4069L10.2747 11.4675L7.91768 9.1105L5.56066 11.4675L4.5 10.4069L6.85702 8.04984L4.61785 5.81067L5.67851 4.75001L7.91768 6.98918L10.1569 4.75Z"
          fill="#FD785B"
          fillRule="evenodd"
          style={Object {}}
        />
        <circle
          cx="8"
          cy="8"
          r="6.5"
          stroke="white"
          style={Object {}}
        />
      </svg>
    </View>
  </View>
  <View
    style={
      Object {
        "flexGrow": 1,
        "paddingHorizontal": 20,
        "paddingTop": 3,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      contactSyncProgress.header
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Regular",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      contactSyncProgress.progress
    </Text>
  </View>
</View>
`;
